--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lite-server": "^2.6.1"
   },
   "dependencies": {
-    
+    "bootstrap-social": "^5.1.1",
+    "font-awesome": "^4.7.0"
   }
 }
