--- a/package.json
+++ b/package.json
@@ -28,12 +28,18 @@
   "homepage": "https://github.com/parnniti/git-test#readme",
   "devDependencies": {
     "cssmin": "^0.4.3",
+    "grunt": "^1.5.3",
+    "grunt-browser-sync": "^2.2.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-sass": "^3.1.0",
     "htmlmin": "^0.0.7",
+    "jit-grunt": "^0.10.0",
     "lite-server": "^2.6.1",
     "node-sass": "^7.0.1",
     "onchange": "^7.1.0",
     "parallelshell": "^3.0.2",
     "rimraf": "^3.0.2",
+    "time-grunt": "^2.0.0",
     "uglifyjs": "^2.4.11",
     "usemin-cli": "^0.6.0"
   },
