--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/parnniti/git-test#readme",
   "devDependencies": {
+    "browser-sync": "^2.27.10",
     "cssmin": "^0.4.3",
     "grunt": "^1.5.3",
     "grunt-browser-sync": "^2.2.0",
